[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-shadowban-checker"
version = "0.2.0"
description = "Python SDK for the TikTok Shadow Ban Checker Apify actor — multi-signal shadow ban detection with health score, engagement rate and viral potential per video. Audit single videos or entire accounts. No TikTok API key required."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "tiktok", "tiktok-shadow-ban", "tiktok-shadow-ban-checker",
    "tiktok-shadowban-api", "shadow-ban-detection",
    "tiktok-fyp-checker", "tiktok-search-visibility",
    "tiktok-suppression-detection", "tiktok-video-health",
    "tiktok-engagement-rate-api", "tiktok-viral-score",
    "creator-analytics", "creator-self-audit",
    "agency-tools", "brand-safety", "content-moderation-detection",
    "tiktok-without-api-key", "web-scraping",
    "apify", "apify-actor", "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/tiktok-shadow-ban-checker-python"
Documentation = "https://github.com/apivault-labs/tiktok-shadow-ban-checker-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/tiktok-shadow-ban-checker"
"Bug Tracker" = "https://github.com/apivault-labs/tiktok-shadow-ban-checker-python/issues"

[tool.setuptools.packages.find]
include = ["tiktok_shadowban_checker*"]
